# semeion

./: Cargo.toml  LICENSE  README.md
examples/camera/: env.rs  main.rs
examples/camera/entity/: grid.rs  mod.rs  rect.rs
examples/langton/: env.rs  main.rs
examples/langton/entity/: ant.rs  cell.rs  grid.rs  mod.rs
examples/life/: env.rs  main.rs  pattern.rs
examples/life/entity/: cell.rs  grid.rs  mod.rs
examples/mandelbrot/: entity.rs  env.rs  main.rs
examples/rule/: cell.rs  context.rs  env.rs  main.rs  palette.rs
examples/wireworld/: env.rs  main.rs  pattern.rs
examples/wireworld/entity/: cell.rs  mod.rs
src/: error.rs  lib.rs  lifespan.rs  math.rs  space.rs
src/entity/: lifespan.rs  mod.rs  offspring.rs  state.rs
src/env/: mod.rs  neighborhood.rs  scheduler.rs  tile.rs
src/math/: mod.rs  transform.rs  vector.rs
