[package]
name = "semeion"
version = "0.7.0"
authors = ["Marco Conte <gliderkite@gmail.com>"]
edition = "2018"
description = "A generic 2D environment simulator"
readme = "README.md"
repository = "https://github.com/gliderkite/semeion"
documentation = "https://docs.rs/semeion"
license = "MIT"
keywords = ["gamedev", "graphics", "engine", "entity", "2D"]
exclude = ["*.gif"]

[dependencies]

[[example]]
name = "langton"

[[example]]
name = "life"

[[example]]
name = "wireworld"

[[example]]
name = "mandelbrot"

[[example]]
name = "camera"

[dev-dependencies]
ggez = "0.5"
num-complex = "0.3"
rand = "0.7"
